ajout du contraste footer contact et correction icon des footer

--- a/style.css
+++ b/style.css
@@ -58,11 +58,6 @@ figcaption {
     background-color: #F3976C;
 }
 
-.dark-button:hover {
-    color: #F3976C;
-    background-color: black;
-}
-
 div.row.row-no-gutters.social {
     height: 55px;
     margin: 6px auto;
